--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 
 <html lang="zh-CN">
 
-<head>
-    <meta charset="utf-8">
-    <title>我的个人网站</title>
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>我的个人网站</title>
+    </head>
 
-<body>
-<h1>Hello Adalab</h1>
-<p>This is the first page I made at Adalab.</p>
-</body>
+    <body>
+        <h1>Hello Adalab</h1>
+        <p>This is the first page I made at Adalab.</p>
+        <p>我正在学习HTML</p>
+
+    </body>
 
 </html>
