--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Hello Adalab</h1>
         <p>This is the first page I made at Adalab.</p>
         <p>我正在学习<strong>HTML</strong></p>
+        <p>我正在学习<a href="https://html.spec.whatwg.org/multipage/">HTML</a></p>
 
     </body>
 
