--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p>我正在学习<strong>HTML</strong></p>
         <p>我正在学习<a href="https://html.spec.whatwg.org/multipage/">HTML</a></p>
         <p>这是为<a href = "https://www.adalab.cn">Adalab</a>挑战赛制作的网站。</p>
+        <img src="https://resources.whatwg.org/logo-compat.png">
 
     </body>
 
